--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Over 100MB File
+misaki_gothic_2nd\ SDF*
